# Pensamento-Computacional

./: README.md  atividade-logica-algoritmos-gustavo-ribeiro.md  evolucao-das-maquinas-gustavo-ribeiro.md  unidade-3-relatorio-aula-09-04-26.md
Projeto_PensamentoComputacional_LargaEscala/: Desafios.md  Design.md  README.md
Projeto_PensamentoComputacional_LargaEscala/Atividade_Caca_de_Bugs/: Avaliacao.md  Erros_Identificados.md  Projeto_Corrigido.md  README.md
Projeto_PensamentoComputacional_LargaEscala/Atividade_Caca_de_Bugs/codigo/: package.json
Projeto_PensamentoComputacional_LargaEscala/Atividade_Caca_de_Bugs/codigo/src/: App.tsx  data.ts  main.tsx  styles.css
Projeto_PensamentoComputacional_LargaEscala/Aula_Abstracoes_PensamentoComputacional/: Etapa_2_Fluxograma_Instrucoes.md  Etapa_3_Pseudocodigo_Recomendacao.md  README.md  pseudocodigo.md
Projeto_PensamentoComputacional_LargaEscala/codigo/: .env.local  DEPLOY.md  package-lock.json  package.json
Projeto_PensamentoComputacional_LargaEscala/codigo/src/: App.tsx  data.ts  main.tsx  recommendation.ts  styles.css  types.ts
Projeto_PensamentoComputacional_LargaEscala/codigo/src-tauri/: Cargo.toml  tauri.conf.json
Projeto_PensamentoComputacional_LargaEscala/codigo/src-tauri/capabilities/: default.json
Projeto_PensamentoComputacional_LargaEscala/codigo/src-tauri/src/: main.rs
